syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "GrpcServiceProduct.OptionSize";

service OptionSizeGrpc {
	rpc GetAll(Empty) returns (OptionSizes);
	rpc GetAllOfOption(Id) returns (OptionSizes);
	rpc GetAllOfCategory(Id) returns (OptionSizes);
	rpc GetOne(Id) returns (OptionSize);
	rpc Create(CreateOptionSize) returns (Response);
	rpc Update(OptionSize) returns (Response);
	rpc Delete(Id) returns (Response);
	rpc DeleteMany(Ids) returns (Response);
}

message Empty {}

message CreateOptionSize {
  string Size = 1;
  string CategoryId = 2;
}

message OptionSize {
  google.protobuf.StringValue Id = 1;
  google.protobuf.StringValue SizeValue = 2;
  google.protobuf.StringValue CategoryId = 3;
  google.protobuf.Timestamp CreateAt = 4;
  google.protobuf.Timestamp UpdateAt = 5;
}

message Id {
  string SearchId = 1;
}

message Ids {
  repeated Id Item = 1;
}

message OptionSizes {
  repeated OptionSize Item = 1;
}

message Response {
  int32 StatusCode = 1;
  google.protobuf.StringValue Message = 2;
}